--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rustitles"
-version = "1.0.5"
+version = "1.0.6"
 edition = "2021"
 build = "build.rs"
 
@@ -15,6 +15,9 @@ windows = { version = "0.56.0", features = ["Win32_UI_WindowsAndMessaging", "Win
 rfd = "0.11.4"
 indicatif = "0.17"
 image = "0.24"
+log = "0.4"
+env_logger = "0.11"
+chrono = "0.4"
 
 [build-dependencies]
 winres = "0.1"
