--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rustitles"
-version = "1.0.6"
+version = "1.0.7"
 edition = "2021"
 build = "build.rs"
 
@@ -18,6 +18,8 @@ image = "0.24"
 log = "0.4"
 env_logger = "0.11"
 chrono = "0.4"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 
 [build-dependencies]
 winres = "0.1"
