Linux update fixes

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@ target/
 rustitles_log.txt
 rustitles_settings.json
 src/subdivx-dl.exe
+AppDir
+appimagetool-x86_64.AppImage
+linuxdeploy-x86_64.AppImage
+rustitles_linux
