--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rustitles"
-version = "2.0.1"
+version = "2.1.0"
 edition = "2021"
 build = "build.rs"
 
@@ -29,6 +29,7 @@ windows = { version = "0.56.0", features = ["Win32_UI_WindowsAndMessaging", "Win
 
 [target.'cfg(windows)'.build-dependencies]
 winres = "0.1"
+embed-resource = "3.0"
 
 [package.metadata.winres]
 windows_subsystem = "windows"
@@ -37,7 +38,3 @@ windows_subsystem = "windows"
 [[bin]]
 name = "rustitles"
 path = "src/main.rs"
-
-# Platform-specific rename for Linux
-[target.'cfg(target_os = "linux")'.bin]
-name = "rustitles_linux"
